Fonts & icons modification

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>CertifícaTech</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Reem+Kufi" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="./materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="./app.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <script src="https://use.fontawesome.com/0550836500.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <!-- Icons -->
 <!--   <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
@@ -41,7 +41,7 @@
           <li>
 
 
-            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="fas fa-bars"></i></a>
           </li>
         </ul>
       </div>
