Corrección de color

--- a/fs_inicio.html
+++ b/fs_inicio.html
@@ -126,7 +126,7 @@
         <table>
           
           <tr>
-            <td class="tbl_head indigo yellow accent-4">Proceso 1</td>
+            <td class="tbl_head indigo yellow darken-4">Proceso 1</td>
             <td class="grey lighten-2">
               <p>Crear la visión del proyecto:</p>
               <li>Se plasma la inspiración y el enfoque para el resto del proyecto.</li>
@@ -138,7 +138,7 @@
             <td class="grey lighten-5">El Scrum Master y el Stakeholder se identifican utilizando criterios específicos de la selección.</td>
           </tr>          
           <tr>
-            <td class="tbl_head indigo yellow accent-4">Proceso 3</td>
+            <td class="tbl_head indigo yellow darken-4">Proceso 3</td>
             <td class="grey lighten-2">Formar el equipo Scrum: <br>El propietario del producto es quien selecciona losmiembros del equipo, en ocasiones el Scrum Master colabora en este proceso.</td>
           </tr>          
           <tr>
@@ -151,7 +151,7 @@
             </td>
           </tr>          
           <tr>
-            <td class="tbl_head indigo yellow accent-4">Proceso 5</td>
+            <td class="tbl_head indigo yellow darken-4">Proceso 5</td>
             <td class="grey lighten-2">
               <p>Se refinan las épicas y elaboradas.</p>
               <li>Se priorizan las historias y se crea la lista del producto del proyecto.</li>
