--- a/asp_cambio.html
+++ b/asp_cambio.html
@@ -1,35 +1,35 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <title>CertifícaTech</title>
-  
-    <!-- CSS  -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="./materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="./app.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  
-    <!-- Icons -->
-  <!--   <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
-    <link rel="apple-touch-gulpicon" sizes="152x152" href="icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="manifest" href="icons/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff"> -->
-  </head>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+		<title>CertifícaTech</title>
+	
+		<!-- CSS  -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<link href="./materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+		<link href="./app.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	
+		<!-- Icons -->
+	<!--   <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
+		<link rel="apple-touch-gulpicon" sizes="152x152" href="icons/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+		<link rel="manifest" href="icons/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff"> -->
+	</head>
 
 <body>
 <!-- Barra de menú -->
@@ -53,7 +53,7 @@
   <!--/Botón Home  -->
 
  
-  <!-- Menú slide -->
+   <!-- Menú slide -->
   <div>
     <ul id="slide-out" class="side-nav  teal lighten-2">
       <h3>Scrum</h3>
@@ -107,55 +107,64 @@
           <div class="collapsible-body"><a href="fs_lanzamiento.html">Fase de lanzamiento</a></div>
     </ul>
   </div>
-  <!--/Menu slide  -->  
+  <!--/Menu slide  -->
 
   <div class="row">
     <div class="col-md-12 center-align">
       <h1 class="section_title">
-        Fase de implementación
+        Cambio
       </h1>
     </div>
   </div> 
 
+  <!-- Content -->
+
   <div class="container">
-    <div class="row">
-      <div class="col s12">
-
-        <table>
-          
-          <tr>
-            <td class="tbl_head light-green">Proceso 12</td>
-            <td class="grey lighten-2">
-              <p>Crear entregables:</p>
-              <li>El equipo trabaja en las tareas pendientes del Sprint.</li>
-              <li>Se utiliza la tabla de Scrum para el seguimiento del trabajo.</li>
-              <li>Se usa registros de impedimentos para colocar los problemas que enfrente el equipo Scrum.</li>
-            </td>
-          </tr>          
-          <tr>
-            <td class="tbl_head indigo lighten-4 ">Proceso 13</td>
-            <td class="grey lighten-5">
-              <p>Realizar un standup diario:</p>
-              <li>Reunión diaria enfocada en puntos importantes y de duración con limite de tiempo, en la cual 
-              los miembros del equipo muestran sus progresos diarios.
-            </li>
-            </td>
-          </tr>          
-          <tr>
-            <td class="tbl_head light-green">Proceso 14</td>
-            <td class="grey lighten-2">
-              <p>Mantenimiento de los pendientes del producto:</p>
-              <li>La lista de prioridades del producto se debe actualizar continuamente.</li>
-            </td>
-          </tr>
-
-        </table>
-
-      </div>
-    </div>
+    <p>
+      Los proyectos de desarrollo de Scrum son receptivos al cambio mediante el uso de pequeños ciclos de
+      desarrollo que incorporan la retroalimentación del cliente de los entregables del proyecto después de cada
+      sprint. Esto permite que el cliente interactúe regularmente con los miembros del equipo Scrum, vea los
+      incrementos del producto a medida que estén listos, y cambie los requisitos en las etapas tempranas en el
+      ciclo de desarrollo. De esa forma, los equipos de gestión de carteras o de programas pueden responder a
+      las solicitudes de cambio.
+    </p>
+    <p>
+      Ser adaptable al cambio es una ventaja clave del marco de Scrum.
+    </p>
+    <p>
+      La práctica de Scrum se basa en la aceptación del cambio y de
+      convertirlo en una ventaja competitiva. Por lo tanto, es más importante ser flexible que seguir un plan
+      estricto y predefinido. Esto significa que es esencial abordar la gestión de proyectos de una manera
+      adaptativa que permita el cambio durante el desarrollo del producto o de los ciclos rápidos de servicio.
+    </p>
+    <p>
+      En la gestión de cambios en la organización el cuerpo de asesoramiento de Scrum por lo general define el
+      proceso de decisión, cuando no existe un proceso formal, se recomienda que los pequeños cambios que
+      no tienen un impacto significativo en el proyecto se prueben directamente por el propietario del producto.
+      
+      Los cambios a nivel mayor deben ser acordados por el propietario del producto y los socios
+      colaboradores.
+    </p> <br>
+    <p>
+      Las solicitudes de cambio para el proyecto se discuten y aprueban durante los procesos:
+    </p>
+    <li>
+      Desarrollo de épica(s)
+    </li>
+    <li>
+      Creación de la lista priorizada de pendientes del producto
+    </li>
+    <li>
+      Mantenimiento de la lista priorizada de pendientes del producto.
+    </li> <br>
+    <p>
+      En Scrum, todos los requisitos relacionados con el Sprint en curso se suspenden durante el Sprint.
+      Ningún cambio se introduce hasta que se termina el Sprint, a menos que un cambio se considere lo
+      suficientemente importante como para detener el Sprint. En el caso de un cambio urgente, el Sprint se
+      termina y el equipo se reúne para planificar uno nuevo. Así es como Scrum acepta cambios sin cambiar
+      las fechas de lanzamiento.
+    </p>
   </div>
-
-
 
   <!-- Footer -->
   <footer class="page-footer">
