--- a/aspectos_main.html
+++ b/aspectos_main.html
@@ -39,10 +39,8 @@
         <a href="#" class="brand-logo left"><img src="img/select_logo.png" alt="logo"></a>
         <ul id="nav-mobile" class="right">
           <li>
-
-
-            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="material-icons">menu</i></a>
-          </li>
+              <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="fas fa-bars"></i></a>
+          </li>  
         </ul>
       </div>
     </nav>
@@ -93,8 +91,8 @@
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
           <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
           <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
-          <div class="collapsible-body "><a href="">Cambio</a></div>
-          <div class="collapsible-body "><a href="">Riesgo</a></div>
+          <div class="collapsible-body "><a href="asp_cambio.html">Cambio</a></div>
+          <div class="collapsible-body "><a href="asp_riesgos.html">Riesgo</a></div>
         </li>
       </ul>
 
@@ -180,7 +178,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="">Entrar</a>
+              <a href="asp_cambio.html">Entrar</a>
             </div>
           </div>
         </div>
@@ -195,7 +193,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="">Entrar</a>
+              <a href="fs_lanzamiento.html">Entrar</a>
             </div>
           </div>
         </div>
@@ -210,7 +208,7 @@
               <p></p>
             </div>
             <div class="card-action">
-              <a href="">Entrar</a>
+              <a href="asp_riesgos.html">Entrar</a>
             </div>
           </div>
         </div>
