--- a/definicion.html
+++ b/definicion.html
@@ -39,11 +39,9 @@
       <div class="nav-wrapper white">
         <a href="#" class="brand-logo left"><img src="img/select_logo.png" alt="logo"></a>
         <ul id="nav-mobile" class="right">
-          <li>
-
-
-            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="material-icons">menu</i></a>
-          </li>
+            <li>
+                <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="fas fa-bars"></i></a>
+            </li>
         </ul>
       </div>
     </nav>
@@ -94,8 +92,8 @@
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
           <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
           <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
-          <div class="collapsible-body "><a href="">Cambio</a></div>
-          <div class="collapsible-body "><a href="">Riesgo</a></div>
+          <div class="collapsible-body "><a href="asp_cambio.html">Cambio</a></div>
+          <div class="collapsible-body "><a href="asp_riesgos.html">Riesgo</a></div>
         </li>
       </ul>
 
