--- a/error.html
+++ b/error.html
@@ -39,9 +39,7 @@
         <a href="#" class="brand-logo left"><img src="img/select_logo.png" alt="logo"></a>
         <ul id="nav-mobile" class="right">
           <li>
-
-
-            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="material-icons">menu</i></a>
+              <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="fas fa-bars"></i></a>
           </li>
         </ul>
       </div>
