--- a/fases.html
+++ b/fases.html
@@ -39,9 +39,7 @@
         <a href="#" class="brand-logo left"><img src="img/select_logo.png" alt="logo"></a>
         <ul id="nav-mobile" class="right">
           <li>
-
-
-            <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="material-icons">menu</i></a>
+              <a href="#" data-activates="slide-out" class="button-collapse pulse"><i class="fas fa-bars"></i></a>
           </li>
         </ul>
       </div>
@@ -94,8 +92,8 @@
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
           <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
           <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
-          <div class="collapsible-body "><a href="">Cambio</a></div>
-          <div class="collapsible-body "><a href="">Riesgo</a></div>
+          <div class="collapsible-body "><a href="asp_cambio.html">Cambio</a></div>
+          <div class="collapsible-body "><a href="asp_riesgos.html">Riesgo</a></div>
         </li>
       </ul>
 
@@ -122,11 +120,11 @@
 
 
   <div class="row">
-    <div class="col m12 center-align manito">
-    <i class="material-icons medium">aspect_ratio</i>
-      <i class="material-icons medium">touch_app</i><p>Click para ver</p>
-    </div>
-  </div>  
+      <div class="col m12 center-align manito">
+        <!-- <i class="material-icons medium">aspect_ratio</i> -->
+        <i class="far fa-hand-point-down fa-5x"></i><p>Click para ver</p>
+      </div>
+    </div>  
 
   <img src="./img/fases.jpeg" alt="fases" usemap="#Map" class="fases">
 
