--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <div class="collapsible-body "><a href="asp_organizacion.html">Organización</a></div>
           <div class="collapsible-body "><a href="asp_justificacion.html">Justificación del negocio</a></div>
           <div class="collapsible-body "><a href="asp_calidad.html">Calidad</a></div>
-          <div class="collapsible-body "><a href="">Cambio</a></div>
-          <div class="collapsible-body "><a href="">Riesgo</a></div>
+          <div class="collapsible-body "><a href="asp_cambio.html">Cambio</a></div>
+          <div class="collapsible-body "><a href="asp_riesgos.html">Riesgo</a></div>
         </li>
       </ul>
 
